--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Folder for Experimental Code
+_trial/*
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -130,6 +133,7 @@ venv.bak/
 
 # mkdocs documentation
 /site
+mkdocs_github_authors.yaml
 
 # mypy
 .mypy_cache/
@@ -139,8 +143,8 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-# datasets and projects (ignore /datasets dir at root only to allow for docs/en/datasets dir)
-/datasets
+# datasets and projects
+datasets/
 runs/
 wandb/
 .DS_Store
