Revert "New main"

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-# Folder for Experimental Code
-_trial/*
-
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -134,7 +131,6 @@ venv.bak/
 
 # mkdocs documentation
 /site
-mkdocs_github_authors.yaml
 
 # mypy
 .mypy_cache/
@@ -144,8 +140,8 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-# datasets and projects
-datasets/
+# datasets and projects (ignore /datasets dir at root only to allow for docs/en/datasets dir)
+/datasets
 runs/
 wandb/
 .DS_Store
